added fake bass

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STMA</title>
+    <title>STAV</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.dom.js"></script>
