--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="libraries/p5.dom.js"></script>
     <script src="libraries/p5.sound.js"></script>
     <script src="libraries/p5.speech.js"></script>
+    <script src="libraries/rita.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.0.1/Tone.min.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
+
   </head>
   <body>
   </body>
